Import of MADWOLF/OpenCA-Configuration-1.5.3 from CPAN.
gitpan-cpan-distribution: OpenCA-Configuration
gitpan-cpan-version:      1.5.3
gitpan-cpan-path:         MADWOLF/OpenCA-Configuration-1.5.3.tar.gz
gitpan-cpan-author:       MADWOLF
gitpan-cpan-maturity:     released

--- a/examples/RegAuth.conf
+++ b/examples/RegAuth.conf
@@ -52,8 +52,8 @@ pendingbasesheet "sheets/pending_reqs.html"
 processedreqs "/export/home/raclient/processed"
 processedbasesheet "sheets/processed_reqs.html"
 
-archiviedreqs "/export/home/raclient/archivied"
-archiviedbasesheet "sheets/archivied_reqs.html"
+archivedreqs "/export/home/raclient/archived"
+archivedbasesheet "sheets/archived_reqs.html"
 
 certsdir "/usr/local/digid/apache/callisto/www-idd/htdocs/certs"
 tmpcertdir "/usr/local/digid/apache/callisto/www-idd/htdocs/certs/tmp"
